fix: 🐛 improve multiple CSS issues on mobile
improve multiple CSS issues and change 'learn more' btn title of warning
modal on mobile

✅ Closes: #94

--- a/src/global.scss
+++ b/src/global.scss
@@ -96,7 +96,6 @@ ion-button {
     .ion-page {
       position: relative;
       contain: content;
-      max-height: 90vh;
       .modal-content {
         overflow: auto;
       }
